# sage-rs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/actions/: release.yaml
.github/workflows/: release.yaml
bins/sage-cli/: Cargo.toml
bins/sage-cli/src/: main.rs
bins/sage-cli/src/cmd/: child.rs  mod.rs  plugin.rs  runtime.rs  work.rs
bins/sage-cli/src/util/: echo_ai.rs  mod.rs
bins/sage-plugin-dev/: Cargo.toml  README.md  install.sh
bins/sage-plugin-dev/src/: main.rs
bins/sage-plugin-dev/src/cmd/: benchmark.rs  build.rs  clean.rs  git_hook.rs  info.rs  init.rs  mock.rs  mod.rs  post_commit.rs  pre_push.rs  run.rs  test.rs  trace.rs  validate.rs  watch.rs
bins/sage-plugin-dev/src/templates/: javascript.rs  mod.rs  rust.rs
bins/sage-plugin-dev/src/util/: mod.rs  plugin_utils.rs
bins/sage-test/: Cargo.toml
bins/sage-test/src/: main.rs
crates/ai/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/model/: branch.rs  commit.rs  commit_id.rs  commit_message.rs  config.rs  diff_stats.rs  git_action.rs  merge.rs  metadata.rs  mod.rs  stack.rs  stack_graph.rs  undo.rs
crates/core/src/port/: ai.rs  forge.rs  git.rs  mod.rs
crates/core/src/service/: commit.rs  mod.rs  stack.rs  undo.rs
crates/core/src/util/: diff_calc.rs  mod.rs
crates/gh/: Cargo.toml
crates/git/: Cargo.toml
crates/git/src/: adapter.rs  cmd.rs  error.rs  lib.rs  parse.rs
crates/plugin-api/: Cargo.toml  README.md
crates/plugin-api/src/: error.rs  hooks.rs  host.rs  lib.rs  registry.rs
crates/stack/: Cargo.toml
crates/stack/src/: branch.rs  error.rs  facade.rs  lib.rs  options.rs  persist.rs  stack.rs
crates/telemetry/: Cargo.toml
crates/tui/: Cargo.toml  README.md
crates/tui/derive/: Cargo.toml
crates/tui/derive/src/: lib.rs
crates/tui/examples/: beginner_todo.rs  counter.rs  intermediate_chat.rs  simple_counter.rs  ultra_simple.rs  widget_showcase.rs
crates/tui/src/: framework.rs  lib.rs  simple.rs  widgets.rs
docs/: version_management.md
plugins/: README.md  build-all.sh  build-rust.sh  build-ts.sh  install-js-plugins.sh
plugins/branch-validator/: README.md  branch-validator.json  index.js  index.ts  package.json  pnpm-lock.yaml
plugins/commit-linter/: Cargo.toml  README.md  commit-linter.json
plugins/commit-linter/src/: lib.rs
plugins/git-stats/: README.md  git-stats.json  index.js  index.ts  package.json  tsconfig.json
plugins/hello-world/: Cargo.toml  README.md  hello-world.json
plugins/hello-world/src/: lib.rs
scripts/: pre-commit-hook.sh  update_version.sh
src/: lib.rs  main.rs
src/ai/: commit.rs  mod.rs  prompts.rs
src/app/: clean.rs  commit.rs  history.rs  list.rs  mod.rs  nuke.rs  pull_checkout.rs  pull_create.rs  pull_status.rs  push.rs  start.rs  status.rs  switch.rs  sync.rs
src/cli/: clean.rs  clone.rs  cmd.rs  commit.rs  completion.rs  hi.rs  history.rs  list.rs  mod.rs  nuke.rs  pr.rs  push.rs  start.rs  status.rs  switch.rs  sync.rs
src/config/: mod.rs
src/errors/: git.rs  mod.rs
src/gh/: README.md  mod.rs  pulls.rs
src/git/: branch.rs  commit.rs  hooks.rs  list.rs  mod.rs  repo.rs  stash.rs  status.rs
src/tui/: branch.rs  mod.rs  pull.rs
src/ui/: help.rs  mod.rs
src/undo/: mod.rs  service.rs
src/update/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
