[package]
name = "sage"
version = "0.2.10"
edition = "2024"
description = "A Git companion tool with AI capabilities"
authors = ["Brayden Moon"]
readme = "README.md"

[dependencies]
anyhow = "1.0.96"
auth-git2 = "0.5.7"
chrono = "0.4"
clap = { version = "4.5.31", features = ["color", "derive"] }
clap_complete = "4.5.46"
colored = "3.0.0"
dirs = "6.0"
git2 = "0.20.0"
hashbrown = "0.15.2"
inquire = { version = "0.7.0", features = ["editor"] }
octocrab = "0.44.0"
once_cell = "1.19"
openai-api-rs = "6.0.2"
owo-colors = "4.2.0"
palette = "0.7.6"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.36", features = ["full"] }

[lib]
name = "sage"
path = "src/lib.rs"

[[bin]]
name = "sage"
path = "src/main.rs"

[dev-dependencies]
mockall = "0.13.1"
