[[bin]]
name = "sage"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.96"
auth-git2 = "0.5.7"
clap_complete = "4.5.46"
colored = "3.0.0"
dirs = "6.0"
git2 = "0.20.0"
hashbrown = "0.15.2"
octocrab = "0.44.0"
once_cell = "1.19"
openai-api-rs = "6.0.2"
semver = "1.0"
serde_json = "1.0"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v7", "zerocopy"] }

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.clap]
features = [
    "color",
    "derive",
]
version = "4.5.31"

[dependencies.inquire]
features = ["editor"]
version = "0.7.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
features = ["full"]
version = "1.36"

[dev-dependencies]
mockall = "0.13.1"

[lib]
name = "sage"
path = "src/lib.rs"

[package]
authors = ["Brayden Moon"]
description = "A Git companion tool with AI capabilities"
edition = "2024"
name = "sage"
readme = "README.md"
version = "0.4.1"
