########################################
#  sage workspace – root Cargo.toml
########################################

[workspace]
resolver = "3"
members = [
  "crates/*",  # core, git, ai, stack, tui, …
  "bins/*",    # sage-cli, sage-tui
  "xtask",     # automation tasks
]

# Optionally choose which crate `cargo` commands
# (run/test/etc.) default to when no `-p` given.
default-members = ["bins/sage-cli"]

# If your plugins build WASM artefacts into `target-gen/`,
# exclude them so `cargo` doesn’t treat them as crates.
# exclude = ["plugins/*/target-gen"]

# ───────────────────────────────────────
# Shared dependency versions
# Any workspace crate can now say `serde = { workspace = true }`
# and it will pull the exact version declared here.
[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
serde_json = "1.0.140"
owo-colors = "4"
openai-rs = "0.1"
ollama-rs = "0.3"
ratatui = "0.29"
reqwest = "0.12"
tokio = { version = "1.37", features = ["full"], default-features = false }
# ───────────────────────────────────────
# Compilation profiles
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
