[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

# The xtask pattern intentionally keeps dependencies light‑weight and
# compile times short.
[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
xshell = "0.2"
which = "5.0"

[dev-dependencies]
# Allow `cargo xtask --help` auto‑complete if you install `clap_complete`.
clap_complete = "4.5"
