[package]
name = "sage-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sage"
path = "src/main.rs"

[features]
# Top-level toggles that bubble down to crates.
default = ["ai", "stack", "tui", "telemetry"]

ai = ["sage-ai/local"]
stack = ["sage-stack"]
tui = ["sage-tui"]
telemetry = ["sage-telemetry"]

minimal = []
server = ["ai", "stack"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
owo-colors = { workspace = true }
tracing = { workspace = true }
sage-core = { path = "../../crates/core" }
sage-git = { path = "../../crates/git", default-features = false }
sage-stack = { path = "../../crates/stack", optional = true }
sage-ai = { path = "../../crates/ai", optional = true }
sage-tui = { path = "../../crates/tui", optional = true }
sage-telemetry = { path = "../../crates/telemetry", optional = true }
serde_json = "1.0.140"
