[package]
name = "sage-plugin-dev"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sage-plugin-dev"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
owo-colors = { workspace = true }
tracing = { workspace = true }
sage-plugin-api = { path = "../../crates/plugin-api" }
serde_json = { workspace = true }
notify = "6.1.1"
tempfile = "3.10.1"
