[package]
name = "sage-stack"
version = "0.1.0"
edition = "2024"

[dependencies]
sage-core = { path = "../core" }
sage-git = { path = "../git" }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
thiserror = {workspace = true}
